# periodicum-gtk4

./: Cargo.toml
data/resources/: dados.yaml  style.css
src/: backend.rs  dialog.ui  gui.rs  main.rs  table.rs  utils.rs  window.ui
