[package]
name = "periodicum-gtk4"
version = "0.1.0"
authors = ["Márcio <marciosr10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.gio]
git = "https://github.com/gtk-rs/gio"
[dependencies.glib]
git = "https://github.com/gtk-rs/glib"
[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4"
[dependencies.gdk]
package = "gdk4"
git = "https://github.com/gtk-rs/gdk4"



[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
rust-embed = "5.6.0"
